--- a/Kugar.Storage.AliOSS/Kugar.Storage.AliOSS.csproj
+++ b/Kugar.Storage.AliOSS/Kugar.Storage.AliOSS.csproj
@@ -1,14 +1,25 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+	  <TargetFrameworks>netcoreapp3.1;net5.0;</TargetFrameworks>
+	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+	  <Version>1.0.2</Version>
+	  <IncludeSymbols>true</IncludeSymbols>
+	  <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+	  <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
+	  <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Aliyun.OSS.SDK.NetCore" Version="2.12.0" />
   </ItemGroup>
 
-  <ItemGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+		<OutputPath>..\bin\</OutputPath>
+		<DocumentationFile>..\bin\Kugar.Storage.AliOSS.xml</DocumentationFile>
+	</PropertyGroup>
+
+	<ItemGroup>
     <ProjectReference Include="..\Kugar.Storage\Kugar.Storage.csproj" />
   </ItemGroup>
 
